--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
-.gitattributes export-ignore
-.gitignore export-ignore
+/.editorcinfig export-ignore
+/.gitattributes export-ignore
+/.gitignore export-ignore
+/jsmin.php export-ignore
+/minify.php export-ignore
