--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 /.idea
+/doc/buildx/mlrpc_js.fo.xml
+/doc/xmlrpc_js.html
+/doc/xmlrpc_js.pdf
+/lib/jsonrpc_lib.min.js
+/lib/xmlrpc_lib.min.js
+/lib/xmlrpc_wrappers.min.js
+/node_modules
 /package-lock.json
