--- a/.npmignore
+++ b/.npmignore
@@ -1,14 +1,14 @@
+/.editorconfig
 /.gitattributes
 /.github
 /.gitignore
 /.idea
 /.npmignore
-/doc/convert.php
-/doc/custom.fo.xsl
-/doc/custom.xsl
+/doc/build
 /doc/Makefile
-/jsmin.php
+/gulpfile.js
 /Makefile
-/minify.php
+/node_modules
+
 /todo.txt
 /var
